--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,13 @@
     id="addItemInput"
   />
 
+  <h2>
+    {{items.length}} item {{items.length === 1? '' : 's'}}
+  </h2>
+
   <ul>
-    <li *ngFor="let item of items">{{item.description}}</li>
+    <li *ngFor="let item of items">
+      <app-item (remove)="remove(item)" [item]="item"></app-item>
+    </li>
   </ul>
 </div>
